[package]
name = "nym-ethtx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ethers = { version = "0.17" }
futures = "0.3.12"
nym-addressing = { package = "nymsphinx-addressing", git = "https://github.com/nymtech/nym", tag = "v1.0.1" }
nym-websocket = { package = "websocket-requests", git = "https://github.com/nymtech/nym", tag = "v1.0.1" }
tokio = { version = "1.1", features = [ "full" ] }
tokio-tungstenite = "0.13.0"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"